# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: my-action.yml
page_analyzer/: __init__.py  analyzer.py  app.py  controller.py  dbase.py  validator.py
page_analyzer/templates/: index.html
page_analyzer/templates/layout/: base.html
page_analyzer/templates/pages/: 404.html  index.html
page_analyzer/templates/pages/urls/: index.html  new.html
page_analyzer/templates/urls/: index.html  new.html
tests/: test_analyzer.py  test_app.py  test_functions.py
